doc/changes/package_diffs/11.2.0/standard-EXASOL-all/internal_packages.md
# Internal packages comparison between flavor "Standard Exasol All" in 11.2.0 and flavor "Standard Exasol All" in 11.1.1

<!-- markdown-link-check-disable -->

## Apt packages

|    | Package                 | Version in 11.1.1            | Version in 11.2.0    | Status   | Build-Step     |
|---:|:------------------------|:-----------------------------|:---------------------|:---------|:---------------|
|  0 | binutils                | 2.38-4ubuntu2.12             | 2.38-4ubuntu*        | UPDATED  | base_test_deps |
|  1 | gdb                     | 12.1-0ubuntu1~22.04.2        | 12.1-0ubuntu*        | UPDATED  | base_test_deps |
|  2 | gdbserver               | 12.1-0ubuntu1~22.04.2        | 12.1-0ubuntu*        | UPDATED  | base_test_deps |
|  3 | strace                  | 5.16-0ubuntu3                | 5.16-0ubuntu*        | UPDATED  | base_test_deps |
|  4 | valgrind                | 1:3.18.1-1ubuntu2            | 1:3.18.1-1ubuntu*    | UPDATED  | base_test_deps |
|  5 | build-essential         | 12.9ubuntu3                  | 12.9ubuntu*          | UPDATED  | build_deps     |
|  6 | coreutils               | 8.32-4.1ubuntu1.2            | 8.32-4.1ubuntu*      | UPDATED  | build_deps     |
|  7 | curl                    | 7.81.0-1ubuntu1.23           | 7.81.0-1ubuntu*      | UPDATED  | build_deps     |
|  8 | libpcre3-dev            | 2:8.39-13ubuntu0.22.04.1     | 2:8.39-13ubuntu*     | UPDATED  | build_deps     |
|  9 | locales                 | 2.35-0ubuntu3.13             | 2.35-0ubuntu*        | UPDATED  | build_deps     |
| 10 | openjdk-11-jdk-headless | 11.0.30+7-1ubuntu1~22.04     | 11.0.30+7-1ubuntu*   | UPDATED  | build_deps     |
| 11 | protobuf-compiler       | 3.12.4-1ubuntu7.22.04.6      | 3.12.4-1ubuntu*      | UPDATED  | build_deps     |
| 12 | tar                     | 1.34+dfsg-1ubuntu0.1.22.04.2 | 1.34+dfsg-1ubuntu*   | UPDATED  | build_deps     |
| 13 | gnupg                   |                              | No version specified | NEW      | security_scan  |
| 14 | trivy                   |                              | No version specified | NEW      | security_scan  |
| 15 | patchelf                | 0.14.3-1                     | 0.14.3-1             |          | base_test_deps |
| 16 | chrpath                 | 0.16-2                       | 0.16-2               |          | build_deps     |